package pattern.creational.factorymethod;

public enum PaymentType {
    CREDIT_CARD, CASH
}
